# LearnSomething

./: README.md
LearnCmake/lab1/: CMakeLists.txt  README.md  insight.md
LearnCmake/lab1/install/lib/pkgconfig/: gmock.pc  gtest_main.pc
LearnCmake/lab1/lib/: CMakeLists.txt  math_utils.cpp  math_utils.h
LearnCmake/lab1/src/: CMakeLists.txt  main.cpp
LearnCmake/lab1/tests/: CMakeLists.txt  test_math.cpp
LearnCmake/lab2/: CMakeLists.txt  README.md
LearnCmake/lab2/apps/cli/: CMakeLists.txt  main.cpp
LearnCmake/lab2/build_shared/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab2_cmake.sln
LearnCmake/lab2/build_shared/apps/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_shared/apps/cli/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_cli.vcxproj  lab2_cli.vcxproj.filters  run_demo.vcxproj  run_demo.vcxproj.filters
LearnCmake/lab2/build_shared/lib/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_shared/lib/Debug/: gtest_main.lib
LearnCmake/lab2/build_shared/lib/config/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_shared/lib/core/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_core.vcxproj  lab2_core.vcxproj.filters
LearnCmake/lab2/build_shared/lib/core/Debug/: lab2_core.lib
LearnCmake/lab2/build_shared/lib/stats/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_stats.vcxproj  lab2_stats.vcxproj.filters
LearnCmake/lab2/build_shared/lib/stats/Debug/: lab2_stats.exp  lab2_stats.lib
LearnCmake/lab2/build_shared/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  cmake_test_discovery_b1e437e4dc.json  test_stats.vcxproj  test_stats.vcxproj.filters  test_stats[1]_include.cmake  test_stats[1]_tests.cmake  test_string.vcxproj  test_string.vcxproj.filters  test_string[1]_include.cmake  test_string[1]_tests.cmake
LearnCmake/lab2/build_shared/tests/test_stats.dir/Debug/: test_stats.exe.recipe
LearnCmake/lab2/build_shared/tests/test_string.dir/Debug/: test_string.exe.recipe
LearnCmake/lab2/build_shared/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
LearnCmake/lab2/build_static/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab2_cmake.sln
LearnCmake/lab2/build_static/apps/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_static/apps/cli/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_cli.vcxproj  lab2_cli.vcxproj.filters  run_demo.vcxproj  run_demo.vcxproj.filters
LearnCmake/lab2/build_static/lib/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_static/lib/Debug/: gtest_main.lib
LearnCmake/lab2/build_static/lib/config/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
LearnCmake/lab2/build_static/lib/core/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_core.vcxproj  lab2_core.vcxproj.filters
LearnCmake/lab2/build_static/lib/core/Debug/: lab2_core.lib
LearnCmake/lab2/build_static/lib/stats/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lab2_stats.vcxproj  lab2_stats.vcxproj.filters
LearnCmake/lab2/build_static/lib/stats/Debug/: lab2_stats.lib
LearnCmake/lab2/build_static/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  cmake_test_discovery_4b641e9a92.json  test_stats.vcxproj  test_stats.vcxproj.filters  test_stats[1]_include.cmake  test_stats[1]_tests.cmake  test_string.vcxproj  test_string.vcxproj.filters  test_string[1]_include.cmake  test_string[1]_tests.cmake
LearnCmake/lab2/build_static/tests/test_stats.dir/Debug/: test_stats.exe.recipe
LearnCmake/lab2/cmake/: CompilerWarnings.cmake  Lab2Config.cmake.in
LearnCmake/lab2/include/lab2/: version.h.in
LearnCmake/lab2/install/include/lab2/: lab2_config.h  string_utils.h  version.h
LearnCmake/lab2/install/lib/: gtest_main.lib  lab2_core.lib  lab2_stats.lib
LearnCmake/lab2/install/lib/cmake/lab2/: Lab2Config.cmake  (+2 more)
LearnCmake/lab2/lib/: CMakeLists.txt
LearnCmake/lab2/lib/config/: CMakeLists.txt
LearnCmake/lab2/lib/core/: CMakeLists.txt  string_utils.cpp  string_utils.h
LearnCmake/lab2/lib/stats/: CMakeLists.txt  stats.cpp  stats.h
LearnCmake/lab2/tests/: CMakeLists.txt  test_stats.cpp  test_string.cpp
(+126 files in other folders)
